# cloud-console

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/: layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/models/: credentials.rs  identity.rs  mod.rs
src-tauri/src/queries/: exec.rs  exec_async.rs  export_credentials.rs  get_caller_identity.rs  list_profiles.rs  login.rs  mod.rs
src/app/: page.tsx  providers.tsx
src/components/: CredentialsTable.tsx  IdentityTable.tsx  Loader.tsx  useInterval.ts
src/components/icons/: FailureIcon.tsx  IconProps.ts  SuccessIcon.tsx  UnknownIcon.tsx  index.ts
src/context/: LoaderContext.ts
src/models/: credentials-dto.ts  credentials.ts  federation.ts  identity-dto.ts  identity.ts  index.ts  profile.ts
src/queries/: index.ts
src/styles/: globals.css
src/util/: index.ts
